# SentinelReconAI

./: .env.example  .gitignore  Makefile  README.md  SentinelRecon_v2_AdvancedFeatures_Analysis.txt  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
docs/: API.md  CONFIG.md  ETHICS.md
scripts/: setup_db.py
sentinelrecon/: __init__.py  orchestrator.py
sentinelrecon/analysis/: __init__.py
sentinelrecon/analysis/prompt_templates/: __init__.py
sentinelrecon/cli/: __init__.py  display.py  main.py
sentinelrecon/cli/commands/: scan.py
sentinelrecon/core/: __init__.py  ai_remediation_recommender.py  ai_vulnerability_analyzer.py  banner_grabber.py  claude_ai.py  cve_lookup.py  risk_scorer.py  scanner.py  service_detector.py  threat_intel.py  vulnerability_analyzer.py
sentinelrecon/data/: __init__.py  database.py  models.py
sentinelrecon/integrations/: __init__.py  aws_enumerator.py  azure_enumerator.py  gcp_enumerator.py  otx_client.py  shodan_client.py
sentinelrecon/reports/: report_generator.py
sentinelrecon/reports/templates/: report.html.j2
sentinelrecon/utils/: __init__.py  config_manager.py  exceptions.py  logger.py  network_utils.py  validator.py
sentinelrecon/web/: __init__.py
